--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 /datasets
 
-
-
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -36,3 +34,16 @@
 *.dvi
 *.xdv
 *-converted-to.*
+
+# temp files
+.DS_Store
+/.idea
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
